Pull request #66: fix practice card css to not follow rc card css
Merge in NRCSAPPS/cpdifrontend from practice-card-bug to develop

Squashed commit of the following:

commit 952440dc38684bb5bf1a729254f97813e0ac6dc6
Author: Bo Peng <Bo.Peng@usda.gov>
Date:   Tue Jan 30 17:09:09 2024 -0500

    fix practice card css to not follow rc card css

--- a/src/components/ResourceConcernCard/resource-concern-card.scss
+++ b/src/components/ResourceConcernCard/resource-concern-card.scss
@@ -1,6 +1,6 @@
 @import '../../stylesheets/variables';
 
-.heading {
+.rc-heading {
   margin: 0 0 1em 0;
   max-width: 50rem;
   margin-left: auto;
